# garda_project

./: README.md
frontend/: pubspec.yaml
frontend/lib/: main.dart
garda/: package-lock.json  package.json
rentverse-ai-service/: .env.example  CORS_CONFIGURATION.md  Dockerfile  NEW_ROUTES_DOCUMENTATION.md  README.md  debug_prediction.py  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  test_batch_prediction.py  test_cors.py  test_new_routes.py
rentverse-ai-service/notebooks/: Rentverse_rentprice_prediction.ipynb  enhanced_model_comparison.csv  improved_model_comparison.csv  normalization_method_comparison.csv
rentverse-ai-service/rentverse/: cli.py  config.py  main.py
rentverse-ai-service/rentverse/api/: middleware.py
rentverse-ai-service/rentverse/api/routes/: classification.py  health.py  prediction.py
rentverse-ai-service/rentverse/core/: exceptions.py  logging.py
rentverse-ai-service/rentverse/models/: improved_price_prediction_pipeline.pkl  ml_models.py  schemas.py  standard_deployment_pipeline.pkl
rentverse-ai-service/rentverse/utils/: __init__.py  helpers.py  preprocessor.py
rentverse-core-service/: .dockerignore  .env.example  .env.test  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierignore  Caddyfile  Dockerfile  README.Docker.md  README.md  audit-ci.json  docker-compose.yml  index.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
rentverse-core-service/.husky/: pre-commit  pre-push
rentverse-core-service/docs/: property.md
rentverse-core-service/src/: app.js
(+73 files in other folders)
